# ticker

./: .editorconfig  README.md  Todo.md  ca.awisse.ticker.json  meson.build  meson.options  ticker.doap
build-aux/flatpak/: ca.awisse.ticker.devel.json  ca.awisse.ticker.json
data/: ca.awisse.ticker.desktop.in  ca.awisse.ticker.gschema.xml  ca.awisse.ticker.gschema.xml.in  ca.awisse.ticker.metainfo.xml.in  ca.awisse.ticker.metainfo.xml.in.in  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: click.c  click.h  labels.css  main.c  meson.build  styles.css  ticker-application.c  ticker-application.h  ticker-button.c  ticker-button.h  ticker-window.c  ticker-window.h  ticker-window.ui  ticker-window.ui.in  ticker.gresource.xml  ticker.gresource.xml.in  ticking.c  ticking.h  time-label.c  time-label.h  time-str.c  time-str.h  timer.c  timer.h  ttimer.c  ttimer.h
